<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/home_greeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_greeting"
        android:textAlignment="center"
        android:textColor="@color/font_color"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/home_background_image"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/home_image_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_greeting"
        app:srcCompat="@drawable/ic_launcher_foreground"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/home_clickme_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="#FF0000"
        android:text="@string/home_click_me"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/home_greeting"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/home_greeting" />

    <TextView
        android:id="@+id/home_first_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/home_first_text"
        android:textColor="@color/font_color"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_background_image" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/home_form_name_input"
        android:inputType="text"
        android:textColor="@color/font_color"
        android:textColorHint="@color/hint_color"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/home_clickme_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_first_text"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/name_input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_form_name_label"
        android:textColor="@color/font_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/name_input"
        app:layout_constraintStart_toStartOf="@+id/name_input" />

    <TextView
        android:id="@+id/password_input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_form_password_label"
        android:textColor="@color/font_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/password_input"
        app:layout_constraintStart_toStartOf="@+id/password_input" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/home_form_password_input"
        android:inputType="textPassword"
        android:textColor="@color/font_color"
        android:textColorHint="@color/hint_color"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/home_clickme_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_first_text"
        app:layout_constraintVertical_bias="0.75" />

</androidx.constraintlayout.widget.ConstraintLayout>